[package]
name = "gh-file-curler"
version = "2.4.0"
edition = "2021"
description = "Grabs only the files from a Github repo, without the Git history"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.24", features = ["blocking", "json"]}
serde_json = "1.0.113"
